--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "deploy": "gh-pages -d .next"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
