--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-{
-  "name": "openai-quickstart-node",
-  "version": "0.1.0",
-  "private": true,
-  "export": "npm run build && next export",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "npm run build && next export",
-    "deploy": "gh-pages -d .next"
-  },
-  "dependencies": {
-    "gh-pages": "^4.0.0",
-    "next": "^13.1.1",
-    "openai": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
-}
+{"type": "commonjs"}
